# ros2_control_ws

./: README.md
notes/: first.txt  userdoc1.txt  userdoc3.txt  userdoc4.txt  userdoc5.txt  userdoc9.txt
src/example_7/: CMakeLists.txt  example_7.xml  package.xml  r6bot_controller.cpp.txt  r6bot_hardware.cpp.txt  r6bot_hardware.hpp.txt
src/example_7/bringup/config/: controllers.yaml  r6bot_controller.yaml
src/example_7/bringup/launch/: arm.launch.py  r6bot_controller.launch.py  send_trajectory.launch.py
src/example_7/controller/: arm_controller.cpp
src/example_7/controller/include/example_7/: arm_controller.hpp  r6bot_controller.hpp
src/example_7/description/launch/: view_r6bot.launch.py
src/example_7/description/ros2_control/: arm.ros2_control.xacro  r6bot.ros2_control.xacro
src/example_7/description/urdf/: arm.urdf  r6bot.urdf.xacro
src/example_7/hardware/: arm_hardware.cpp
src/example_7/hardware/include/example_7/: arm_hardware.hpp
src/example_7/test/: test_r6bot_controller_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
src/position_controller_publisher/: CMakeLists.txt  package.xml
src/position_controller_publisher/src/: position_controller_publisher.cpp
src/ros2_control_demo_description/: CMakeLists.txt
src/ros2_control_demo_description/octo_gauge_rover/config/: joint_names.yaml  rviz.rviz
src/ros2_control_demo_description/octo_gauge_rover/urdf/: arm.csv  arm.urdf
src/ros2_control_demo_description/octo_gauge_rover/worlds/: arm.world
src/ros2_control_gauge_rover/: CMakeLists.txt  README.md  package.xml  ros2_control_gauge_rover.xml
src/ros2_control_gauge_rover/bringup/config/: rrbot_forward_position_publisher.yaml
src/ros2_control_gauge_rover/bringup/launch/: rrbot_modular_actuators.launch.py
src/ros2_control_gauge_rover/description/launch/: view_robot.launch.py
src/ros2_control_gauge_rover/description/ros2_control/: rrbot_modular_actuators.ros2_control.xacro
src/ros2_control_gauge_rover/description/urdf/: rrbot_modular_actuators.urdf.xacro
src/ros2_control_gauge_rover/hardware/: rrbot_actuator.cpp
src/ros2_control_gauge_rover/hardware/include/ros2_control_gauge_rover/: rrbot_actuator.hpp
src/ros2_control_gauge_rover/rrbot/urdf/: rrbot.materials.xacro  rrbot_description.urdf.xacro
